force-app/main/default/objects/Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating (1-5)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>