force-app/main/default/objects/Feedback__c/validationRules/Rating_Between_1_And_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Between_1_And_5</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Rating__c)), OR(Rating__c &lt; 1, Rating__c &gt; 5))</errorConditionFormula>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>